--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
       <h2>Compose Tweet</h2>
       <form id="tweet-zone" action="/tweets/" method="POST">
         <textarea id="new-tweet" name="text" rows="1" placeholder="What are you humming about?"></textarea>
-        <input type="submit" value="Tweet">
+        <input id="submit" type="submit" value="Tweet">
         <span id="letter-count" class="counter">140</span>
       </form>
     </section>
