added a toggle button that show/hides the text entry area

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/app.js"></script>
   <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+  <script type="text/javascript" src="/scripts/toggle-form.js"></script>
 
 </head>
 
@@ -33,7 +34,10 @@
   <nav>
     <div class="nav-content">
       <span>tweeter</span>
-      <span>new tweet</span>
+      <div class="stacked">
+        <span>new tweet</span>
+        <button id="showTweeter"><img src="/images/arrrow.png"></button>
+      </div>
     </div>
   </nav>
 
