--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
   <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   <script type="text/javascript" src="/scripts/toggle-form.js"></script>
 
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 </head>
 
 <body>
@@ -40,32 +41,37 @@
       </div>
     </div>
   </nav>
+  <!-- The Nav color bar for smaller screen sizes -->
+  <div id="backNav"></div>
+  <div id="content">
+    <header>
+      <div id="profile-pic">
+        <img src="/images/profile-hex.png">
+      </div>
+      <div id="name">
+        <h2>Your Name</h2>
+      </div>
+    </header>
+    <div id="placeholder"></div>
 
-  <header>
-    <div id="profile-pic">
-      <img src="/images/profile-hex.png">
-    </div>
-    <div id="name">
-      <h2>Your Name</h2>
-    </div>
-  </header>
-
-  <!-- Page-specific (main) content here -->
-  <main class="container">
-    <section class="new-tweet">
-      <div class="errorMessage" id="authError"><i class="fa fa-exclamation-triangle"></i>Error: No characters = bad time.</div>
-      <div class="errorMessage" id="authError2"><i class="fa fa-exclamation-triangle"></i>Error: Too many characters.</div>
-      <h2>Compose Tweet</h2>
-      <form id="tweet-zone" action="/tweets/" method="POST">
-        <textarea id="new-tweet" name="text" rows="1" placeholder="What are you humming about?"></textarea>
-        <input id="submit" type="submit" value="Tweet">
-        <span id="letter-count" class="counter">140</span>
-      </form>
-    </section>
-    <section class="old-tweets">
-    </section>
-  </main>
-
+    <!-- Page-specific (main) content here -->
+    <main class="container">
+      <section class="new-tweet">
+        <div class="errorMessage" id="authError"><i class="fa fa-exclamation-triangle"></i>Error: No characters = bad
+          time.</div>
+        <div class="errorMessage" id="authError2"><i class="fa fa-exclamation-triangle"></i>Error: Too many characters.
+        </div>
+        <h2>Compose Tweet</h2>
+        <form id="tweet-zone" action="/tweets/" method="POST">
+          <textarea id="new-tweet" name="text" rows="1" placeholder="What are you humming about?"></textarea>
+          <input id="submit" type="submit" value="Tweet">
+          <span id="letter-count" class="counter">140</span>
+        </form>
+      </section>
+      <section class="old-tweets">
+      </section>
+    </main>
+  </div>
 </body>
 
 </html>
