cleaned and commented nav.css

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   <!-- Top nav bar (fixed) -->
   <nav>
     <div class="nav-content">
-      <span>tweeter</span>
+      <span id="logo">tweeter</span>
       <div class="stacked">
         <span><b>Write</b> a new tweet!</span>
         <button id="showTweeter"><i class="fa fa-angle-double-down"></i></button>
@@ -42,8 +42,7 @@
     </div>
   </nav>
 
-  <!-- Page-specific (main) content here -->
-  <!-- flex wrapper for body content -->
+  <!-- flex wrapper for body content that excludes the nav -->
   <div id="content">
 
     <!-- Header - (fixed in larger screens) -->
