one more name from camel-case to hyphens, added a dependency to the readme

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       <span id="logo">tweeter</span>
       <div class="stacked">
         <span><b>Write</b> a new tweet!</span>
-        <button id="showTweeter"><i class="fa fa-angle-double-down"></i></button>
+        <button id="show-tweeter"><i class="fa fa-angle-double-down"></i></button>
       </div>
     </div>
   </nav>
